feat: select a specific chapter upload to download by source key
